fixed sendMessage css glitch on mobile

--- a/client/src/components/features/Messenger/MessengerContainer/MessengerContainer.module.css
+++ b/client/src/components/features/Messenger/MessengerContainer/MessengerContainer.module.css
@@ -36,7 +36,7 @@
   }
 
   .messages {
-    height: 80%;
+    height: 78%;
   }
 }
 
